--- a/一篇文章.md
+++ b/一篇文章.md
@@ -36,7 +36,7 @@ what are you think bird[^big]?
 
 [^big]:this is a big bird.
 
-#  <center> title</center>>
+#  <center> title </center>
 
 ## title1
 
