--- a/一篇文章.md
+++ b/一篇文章.md
@@ -26,7 +26,7 @@ asdawdss
 >
 > 123666
 
-[哔哩哔哩网站](https://bilibili.com)
+[哔哩哔哩](http://bilibili.com)
 
 
 
@@ -36,9 +36,15 @@ what are you think bird[^big]?
 
 [^big]:this is a big bird.
 
-#  <center> title </center>
+#  
 
 ## title1
 
+$$
+f(x)=x+sin(\alpha)
+$$
 
+$$
+s=\sqrt[3]{abc}
+$$
 
